--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-discord_key=MTAxNDE0NTEzNjUzNzYzNjkwNQ.GlEjB0.u7BPHZn27WgL49CpwSukfc0sGcyFEwNPN09rV4
+discord_key=MTAxNDE0NTEzNjUzNzYzNjkwNQ.GWLTk5.IkDWVud-ylktJjWZwjx5GBlQCPXDMf6VgZiIe4
